--- a/notebooks/L1-Model_prompt_parser.ipynb
+++ b/notebooks/L1-Model_prompt_parser.ipynb
@@ -41,21 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b7ed03ed-1322-49e3-b2a2-33e94fb592ef",
-   "metadata": {
-    "height": 115,
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sk-prod-openai-describe-video-key-kRGnEiK8JXhZJ7q9CxxgT3BlbkFJKRcsaQZRrBW6UBQoMbhs\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "a51fe615",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
@@ -63,7 +52,7 @@
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
     "openai.api_key = os.environ['OPENAI_API_KEY']\n",
-    "print(openai.api_key)"
+    "# print(openai.api_key)"
    ]
   },
   {
@@ -76,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "4336d784-65c2-4a11-8489-b445b1fad177",
    "metadata": {
     "height": 234
@@ -110,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "484bfa6a",
    "metadata": {
     "height": 166,
@@ -133,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "a1d076ce",
    "metadata": {
     "height": 30,
@@ -146,7 +135,7 @@
        "'1+1 equals 2.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
