renaming the first-notebook

--- a/notebooks/A1-Model_prompt_parser.ipynb
+++ b/notebooks/A1-Model_prompt_parser.ipynb
@@ -41,11 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a51fe615",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here's a little bit of starter code.\n",
+    "# import OS, import OpenAI, and load my OpenAI secret key. \n",
+    "# The OpenAI library is already installed in my uv environment. \n",
+    "\n",
     "import os\n",
     "import openai\n",
     "\n",
@@ -60,12 +64,12 @@
    "id": "719a92fb-8227-4513-8950-c965b822c425",
    "metadata": {},
    "source": [
-    "Note: LLM's do not always produce the same results. When executing the code in your notebook, you may get slightly different answers that those in the video."
+    "Note: LLM's do not always produce the same results. When executing the code in your notebook, you may get slightly different answers that those in the lecture."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4336d784-65c2-4a11-8489-b445b1fad177",
    "metadata": {
     "height": 234
@@ -89,6 +93,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4094e3d",
+   "metadata": {},
+   "source": [
+    "Here's a helper function. you can say get completion on \"what is 1 plus 1\", and this will call ChatGPT, or technically the model GPT-3.5 Turbo, to give you an answer back like this.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bbad9cdb",
    "metadata": {},
    "source": [
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "484bfa6a",
    "metadata": {
     "height": 166,
@@ -115,14 +127,14 @@
     "    response = openai.ChatCompletion.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
-    "        temperature=0, \n",
+    "        temperature=0.9, \n",
     "    )\n",
     "    return response.choices[0].message[\"content\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a1d076ce",
    "metadata": {
     "height": 30,
@@ -132,10 +144,10 @@
     {
      "data": {
       "text/plain": [
-       "'1+1 equals 2.'"
+       "'1+1=2'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,8 +157,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38d99eb3",
+   "metadata": {},
+   "source": [
+    "Now, to motivate the LangChain abstractions for models, prompts and parsers, let's say you get an email from a customer in a language other than English. In order to make sure this is accessible, the other language I'm going to use is the English pirate language, where the complaint is: \"I'd be fuming that me blender lid flew off and splattered my kitchen walls with smoothie. And to make matters worse, the warranty don't cover the cost of cleaning up me kitchen. I need your help right now, matey.\"  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1b32b57a",
    "metadata": {
     "height": 149,
@@ -175,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "18c34459",
    "metadata": {
     "height": 64,
@@ -189,8 +209,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c387333",
+   "metadata": {},
+   "source": [
+    "In order to actually accomplish this, if you've seen a little bit of prompting before, I'm going to specify the prompt using an f-string with the instructions, \"translate the text delimited by triple backticks into style that is style\", and then plug in these two styles.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "80b558e2",
    "metadata": {
     "height": 132,
@@ -232,8 +260,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85458def",
+   "metadata": {},
+   "source": [
+    "You can then prompt the Large Language Model to get a response. Let's see what the response is. It says the English pirate's message was translated into this very polite one. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c883dcbd",
    "metadata": {
     "height": 30,
@@ -246,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "99b33f61",
    "metadata": {
     "height": 30,
@@ -256,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Ah, I'm really frustrated that my blender lid flew off and splattered my kitchen walls with smoothie! And to make matters worse, the warranty doesn't cover the cost of cleaning up my kitchen. I could really use your help right now, friend.\""
+       "\"Ah, I'm really frustrated that my blender lid flew off and splattered my kitchen walls with smoothie! And to make matters worse, the warranty doesn't cover the cost of cleaning up my kitchen. I could really use your help right now, my friend.\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,8 +309,7 @@
    "id": "61b996e5",
    "metadata": {},
    "source": [
-    "## Situation: you have different customers writing reviews in different languages. \n",
-    "## Not just english pirates but also like french, german, japanise, hindi and so on! \n",
+    "## Situation: you have different customers writing reviews in different languages. Not just english pirates but also like French, German, Japanese, and so on! you can imagine having to generate a whole sequence of prompts to generate such translations.  \n",
     "## Task: you have to convert all reviews in the Amarical English language. \n",
     "## Action: Use LangChain \n",
     "## Results: More managable and clean code. "
@@ -292,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3a525b58",
    "metadata": {
     "height": 30,
@@ -313,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "f0d4a269",
    "metadata": {
     "height": 30,
@@ -327,13 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "1cc0c8b8",
    "metadata": {
     "height": 81,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_79621/3881262624.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  chat = ChatOpenAI(temperature=0.0, model=llm_model)\n"
+     ]
+    }
+   ],
    "source": [
     "# To control the randomness and creativity of the generated\n",
     "# text by an LLM, use temperature = 0.0 whereas, the default is 0.7 \n",
@@ -350,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "57bda7d8",
    "metadata": {
     "height": 98,
@@ -368,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "3a31f246",
    "metadata": {
     "height": 81,
@@ -379,12 +423,12 @@
     "# To repeatedly re-use this template let's import the ChatPromptTemplate \n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "# create a prompt template using the template_string from_template (static method) of ChatPromptTemplate \n",
-    "prompt_template = ChatPromptTemplate.from_template(template_string)\n"
+    "prompt_template = ChatPromptTemplate.from_template(template_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "cac2cb16",
    "metadata": {
     "height": 30,
@@ -397,7 +441,7 @@
        "PromptTemplate(input_variables=['style', 'text'], input_types={}, partial_variables={}, template='Translate the text that is delimited by triple backticks into a style that is {style}. text: ```{text}```\\n')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,12 +456,12 @@
    "id": "ecf1f93c",
    "metadata": {},
    "source": [
-    "### As you can see there are two input variables: 'style' and 'text' as show in the {} in the tempalte_string "
+    "### As you can see there are two input variables: 'style' and 'text' as show in the {} in the template_string "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "cdc5566c",
    "metadata": {
     "height": 30,
@@ -430,7 +474,7 @@
        "['style', 'text']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "bbd51a93",
    "metadata": {
     "height": 64,
@@ -458,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "48989d11",
    "metadata": {
     "height": 149,
@@ -487,7 +531,7 @@
    },
    "outputs": [],
    "source": [
-    "# create custom_message which will generate the prompt \n",
+    "# create custom_messages which will generate the prompt \n",
     "# we will pass this to an LLM next to get the response \n",
     "customer_messages = prompt_template.format_messages(\n",
     "                    style=customer_style,\n",
@@ -496,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "8c09d8b4",
    "metadata": {
     "height": 47,
@@ -520,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "e02dafa2",
    "metadata": {
     "height": 30,
@@ -543,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "bd789f9f",
    "metadata": {
     "height": 47,
@@ -554,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_9719/1472147048.py:2: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_79621/1472147048.py:2: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  customer_response = chat(customer_messages)\n"
      ]
     }
@@ -566,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ad294407",
    "metadata": {
     "height": 30,
@@ -593,15 +637,23 @@
    "id": "fd450cd0",
    "metadata": {},
    "source": [
-    "### as you can imagine the other responses are in other languages, \n",
+    "### as you can imagine, the other responses are in other languages, \n",
     "### and this tool can be used to translate the messages for an english \n",
     "### speaker to understand and reply to. \n",
     "### Task: try modify a prompt and see how you can get the different outputs. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c38fcae8",
+   "metadata": {},
+   "source": [
+    "Let's suppose our customer service agent replies to the customer in their original language. Let's say an English-speaking customer service agent writes this: \"Hey there customer, warranty does not cover cleaning expenses for your kitchen because it's your fault. You misused your blender by forgetting to put on the lid. Tough luck. See ya.\"  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "7c267e5f",
    "metadata": {
     "height": 166,
@@ -609,12 +661,7 @@
    },
    "outputs": [],
    "source": [
-    "# now let's hope our English speaking customer service agent \n",
-    "# wants to reply to the customer in their original language \n",
-    "# this is a polite message \n",
-    "# let's convert this into a pirate english \n",
-    "# to reply to the same customer \n",
-    "# in the polite tone in english pirate\n",
+    "# customer service agent's reply in polite english -> we will convert this into an English Pirate. \n",
     "service_reply = \"\"\"Hey there customer, \\\n",
     "the warranty does not cover \\\n",
     "cleaning expenses for your kitchen \\\n",
@@ -628,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "2ff72bd1",
    "metadata": {
     "height": 81,
@@ -644,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7d9e8f3f",
    "metadata": {
     "height": 98,
@@ -675,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "a0ae5552",
    "metadata": {
     "height": 47,
@@ -686,7 +733,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ahoy there, valued customer! Regrettably, the warranty be not coverin' the costs o' cleanin' yer galley due to yer own negligence. Ye see, 'twas yer own doin' that ye forgot to secure the lid afore startin' the blender. 'Tis a tough break, indeed! Fare thee well!\n"
+      "Ahoy there, valued customer! Regrettably, the warranty be not coverin' the cost o' cleanin' yer galley due to yer own negligence. Ye see, 'twas yer own doin' that ye forgot to secure the lid afore startin' the blender. 'Tis a tough break, indeed! Fare thee well, matey!\n"
      ]
     }
    ],
@@ -694,6 +741,14 @@
     "# Let's prompt to ChatGPT/LLM and print the response that it gives back\n",
     "service_response = chat(service_messages)\n",
     "print(service_response.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "324c3c46",
+   "metadata": {},
+   "source": [
+    "Go to: Slide #6, 7 "
    ]
   },
   {
@@ -732,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "id": "f1ccdff5",
    "metadata": {
     "height": 98,
@@ -745,7 +800,7 @@
        "{'gift': False, 'delivery_days': 5, 'price_value': 'pretty affordable!'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "df0f4680",
    "metadata": {
     "height": 540,
@@ -814,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "id": "f2386e9c",
    "metadata": {
     "height": 81,
@@ -842,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "id": "121bb0d4",
    "metadata": {
     "height": 81,
@@ -881,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "id": "10de1d28",
    "metadata": {
     "height": 30,
@@ -894,7 +949,7 @@
        "str"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
