--- a/notebooks/A1-Model_prompt_parser.ipynb
+++ b/notebooks/A1-Model_prompt_parser.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "484bfa6a",
    "metadata": {
     "height": 166,
@@ -127,14 +127,14 @@
     "    response = openai.ChatCompletion.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
-    "        temperature=0.9, \n",
+    "        temperature=0.0, \n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]\n"
+    "    return response.choices[0].message[\"content\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a1d076ce",
    "metadata": {
     "height": 30,
@@ -144,10 +144,10 @@
     {
      "data": {
       "text/plain": [
-       "'1+1=2'"
+       "'1+1 equals 2.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "1b32b57a",
    "metadata": {
     "height": 149,
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "18c34459",
    "metadata": {
     "height": 64,
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "80b558e2",
    "metadata": {
     "height": 132,
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "c883dcbd",
    "metadata": {
     "height": 30,
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "99b33f61",
    "metadata": {
     "height": 30,
@@ -292,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Ah, I'm really frustrated that my blender lid flew off and splattered my kitchen walls with smoothie! And to make matters worse, the warranty doesn't cover the cost of cleaning up my kitchen. I could really use your help right now, my friend.\""
+       "'Arrr, I am quite upset that my blender lid flew off and splattered my kitchen walls with smoothie! And to make matters worse, the warranty does not cover the cost of cleaning up my kitchen. I could really use your help at this moment, friend.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3a525b58",
    "metadata": {
     "height": 30,
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "f0d4a269",
    "metadata": {
     "height": 30,
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "1cc0c8b8",
    "metadata": {
     "height": 81,
@@ -373,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_79621/3881262624.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_29762/3881262624.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
       "  chat = ChatOpenAI(temperature=0.0, model=llm_model)\n"
      ]
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "57bda7d8",
    "metadata": {
     "height": 98,
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "3a31f246",
    "metadata": {
     "height": 81,
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "cac2cb16",
    "metadata": {
     "height": 30,
@@ -441,7 +441,7 @@
        "PromptTemplate(input_variables=['style', 'text'], input_types={}, partial_variables={}, template='Translate the text that is delimited by triple backticks into a style that is {style}. text: ```{text}```\\n')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "cdc5566c",
    "metadata": {
     "height": 30,
@@ -474,7 +474,7 @@
        "['style', 'text']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "bbd51a93",
    "metadata": {
     "height": 64,
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "48989d11",
    "metadata": {
     "height": 149,
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "dff3954f",
    "metadata": {
     "height": 64,
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "8c09d8b4",
    "metadata": {
     "height": 47,
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "e02dafa2",
    "metadata": {
     "height": 30,
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "bd789f9f",
    "metadata": {
     "height": 47,
@@ -598,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_79621/1472147048.py:2: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_29762/1472147048.py:2: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  customer_response = chat(customer_messages)\n"
      ]
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "ad294407",
    "metadata": {
     "height": 30,
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "7c267e5f",
    "metadata": {
     "height": 166,
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "2ff72bd1",
    "metadata": {
     "height": 81,
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "7d9e8f3f",
    "metadata": {
     "height": 98,
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "a0ae5552",
    "metadata": {
     "height": 47,
@@ -733,7 +733,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ahoy there, valued customer! Regrettably, the warranty be not coverin' the cost o' cleanin' yer galley due to yer own negligence. Ye see, 'twas yer own doin' that ye forgot to secure the lid afore startin' the blender. 'Tis a tough break, indeed! Fare thee well, matey!\n"
+      "Ahoy there, valued customer! Regrettably, the warranty be not coverin' the costs o' cleanin' yer galley due to yer own negligence. Ye see, 'twas yer own doin' when ye forgot to secure the lid afore startin' the blender. 'Tis a tough break, indeed! Fare thee well, matey!\n"
      ]
     }
    ],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "f1ccdff5",
    "metadata": {
     "height": 98,
@@ -800,7 +800,7 @@
        "{'gift': False, 'delivery_days': 5, 'price_value': 'pretty affordable!'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "df0f4680",
    "metadata": {
     "height": 540,
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "f2386e9c",
    "metadata": {
     "height": 81,
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "121bb0d4",
    "metadata": {
     "height": 81,
@@ -911,7 +911,7 @@
       "{\n",
       "    \"gift\": true,\n",
       "    \"delivery_days\": 2,\n",
-      "    \"price_value\": [\"It's slightly more expensive than the other leaf blowers out there\"]\n",
+      "    \"price_value\": \"It's slightly more expensive than the other leaf blowers out there, but I think it's worth it for the extra features.\"\n",
       "}\n"
      ]
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "10de1d28",
    "metadata": {
     "height": 30,
@@ -949,7 +949,7 @@
        "str"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "3a3c0609",
    "metadata": {
     "height": 81,
@@ -982,7 +982,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# You will get an error by running this line of code \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# because'gift' is not a dictionary\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# 'gift' is a string\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(\u001b[33m'\u001b[39m\u001b[33mgift\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# You will get an error by running this line of code \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# because'gift' is not a dictionary\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# 'gift' is a string\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(\u001b[33m'\u001b[39m\u001b[33mgift\u001b[39m\u001b[33m'\u001b[39m)\n",
       "\u001b[31mAttributeError\u001b[39m: 'str' object has no attribute 'get'"
      ]
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "c2e0ec49",
    "metadata": {
     "height": 47,
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "id": "9dea24b4",
    "metadata": {
     "height": 353,
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "b57e1ba8",
    "metadata": {
     "height": 30,
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "fdeaf4fc",
    "metadata": {
     "height": 30,
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "1eb176c5",
    "metadata": {
     "height": 30,
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 46,
    "id": "082947fc",
    "metadata": {
     "height": 370,
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 47,
    "id": "1f1537a7",
    "metadata": {
     "height": 30,
@@ -1194,15 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18388ea9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "7b663657",
    "metadata": {
     "height": 30,
@@ -1216,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 49,
    "id": "b8c3a9fe",
    "metadata": {
     "height": 30,
@@ -1243,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "id": "904f1c25",
    "metadata": {
     "height": 30,
@@ -1257,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "d48b647a",
    "metadata": {
     "height": 30,
@@ -1269,10 +1261,10 @@
       "text/plain": [
        "{'gift': True,\n",
        " 'delivery_days': 2,\n",
-       " 'price_value': [\"It's slightly more expensive than the other leaf blowers out there\"]}"
+       " 'price_value': [\"It's slightly more expensive than the other leaf blowers out there, but I think it's worth it for the extra features.\"]}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "4346150f",
    "metadata": {
     "height": 30,
@@ -1296,7 +1288,7 @@
        "dict"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 55,
    "id": "a833fcea",
    "metadata": {
     "height": 30,
@@ -1317,16 +1309,32 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "[\"It's slightly more expensive than the other leaf blowers out there, but I think it's worth it for the extra features.\"]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_dict.get('delivery_days')"
+    "output_dict.get('price_value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e5e261",
+   "metadata": {},
+   "source": [
+    "This way, what starts as natural language text becomes structured, machine-readable and ready to use in applications.  \n",
+    "\n",
+    "That’s it for models, prompts, and parsers. With these tools, hopefully you'll be able to reuse prompt templates easily, share them with collaborators, and leverage LangChain's built-in templates that already pair nicely with parsers.  \n",
+    "\n",
+    "This combination of prompt + parser lets you both shape the LLM's output and reliably interpret it programmatically.  \n",
+    "\n",
+    "Let's go into the next section where we'll see how LangChain can help you build better `chatbots`, and have LLMs hold more effective conversations by managing `what they remember` during chats.  \n",
+    "\n",
+    "Goto: Slide # 8"
    ]
   }
  ],
