adding new run data

--- a/notebooks/A3-Chains.ipynb
+++ b/notebooks/A3-Chains.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b84e441b",
    "metadata": {
     "height": 30,
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "974acf8e-8f88-42de-88f8-40a82cb58e8b",
    "metadata": {
     "height": 47,
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b7a09c35",
    "metadata": {
     "height": 30,
@@ -204,7 +204,7 @@
        "6  Está lu bonita calienta muy rápido, es muy fun...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2d9a1778",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "(7, 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e92dff22",
    "metadata": {
     "height": 64,
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "943237a7",
    "metadata": {
     "height": 30,
@@ -279,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_921/2699741783.py:2: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_11182/2699741783.py:2: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
       "  llm = ChatOpenAI(temperature=0.9, model=llm_model)\n"
      ]
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cdcdb42d",
    "metadata": {
     "height": 81,
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d7abc20b",
    "metadata": {
     "height": 30,
@@ -321,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_921/874078820.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_11182/874078820.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  chain = LLMChain(llm=llm, prompt=prompt)\n"
      ]
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ad44d1fb",
    "metadata": {
     "height": 47,
@@ -342,17 +342,9 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_921/1990449555.py:3: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  chain.run(product)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'\"Royal Comfort Bedding\"'"
+       "'Elite Seating Co.'"
       ]
      },
      "execution_count": 12,
@@ -362,7 +354,7 @@
    ],
    "source": [
     "# the above chain will let us run through the prompt, now. \n",
-    "product = \"Queen Size Sheet Set\"\n",
+    "product = \"Gaming Chair\"\n",
     "chain.run(product)\n",
     "\n",
     "# under the hood it will format the prompt and \n",
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "78458efe",
    "metadata": {
     "height": 30,
@@ -487,8 +479,8 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new SimpleSequentialChain chain...\u001b[0m\n",
-      "\u001b[36;1m\u001b[1;3m\"Regal Linens\"\u001b[0m\n",
-      "\u001b[33;1m\u001b[1;3mRegal Linens offers luxurious and elegant bedding sets, towels, and home decor accessories to enhance your living space. Upgrade today!\u001b[0m\n",
+      "\u001b[36;1m\u001b[1;3m\"GraphicsTech Laptops\"\u001b[0m\n",
+      "\u001b[33;1m\u001b[1;3mGraphicsTech Laptops offers high-performance laptops designed for graphic-intensive tasks with cutting-edge features and sleek design for optimal productivity.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -496,15 +488,17 @@
     {
      "data": {
       "text/plain": [
-       "'Regal Linens offers luxurious and elegant bedding sets, towels, and home decor accessories to enhance your living space. Upgrade today!'"
+       "'GraphicsTech Laptops offers high-performance laptops designed for graphic-intensive tasks with cutting-edge features and sleek design for optimal productivity.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "product = \"Laptop with GPU\" \n",
+    "\n",
     "# run this chain over any product / product desc. \n",
     "overall_simple_chain.run(product)"
    ]
@@ -533,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "4c129ef6",
    "metadata": {
     "height": 30,
@@ -546,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "016187ac",
    "metadata": {
     "height": 217,
@@ -573,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "0fb0730e",
    "metadata": {
     "height": 166,
@@ -596,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "6accf92d",
    "metadata": {
     "height": 166,
@@ -618,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "c7a46121",
    "metadata": {
     "height": 217,
@@ -658,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "89603117",
    "metadata": {
     "height": 149,
@@ -678,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "51b04f45",
    "metadata": {
     "height": 47,
@@ -689,7 +683,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_921/1992003631.py:2: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_11182/1992003631.py:2: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  overall_chain(review)\n"
      ]
     },
@@ -708,13 +702,13 @@
      "data": {
       "text/plain": [
        "{'Review': \"Je trouve le goût médiocre. La mousse ne tient pas, c'est bizarre. J'achète les mêmes dans le commerce et le goût est bien meilleur...\\nVieux lot ou contrefaçon !?\",\n",
-       " 'English_Review': \"I find the taste poor. The foam doesn't hold, it's weird. I buy the same ones in stores and the taste is much better... Old batch or counterfeit!?\",\n",
-       " 'summary': 'The reviewer is disappointed with the poor taste and lack of foam retention in the product compared to similar ones bought in stores, questioning if they received an old batch or a counterfeit product.',\n",
-       " 'followup_message': \"Cher client,\\n\\nNous sommes désolés d'apprendre que vous avez été déçu par notre produit. Nous tenons à vous assurer que nous prenons la qualité de nos produits très au sérieux et que nous vérifions régulièrement nos processus de fabrication pour garantir la fraîcheur et l'authenticité de nos produits.\\n\\nSi vous pensez avoir reçu un lot périmé ou contrefait, nous vous encourageons à nous contacter immédiatement pour que nous puissions résoudre ce problème et vous offrir un produit de qualité conforme à nos normes.\\n\\nNous vous remercions pour votre feedback et espérons avoir l'opportunité de regagner votre confiance à l'avenir.\\n\\nCordialement,\\nL'équipe de service client\",\n",
+       " 'English_Review': \"I find the taste mediocre. The foam doesn't hold, it's weird. I buy the same ones from the store and the taste is much better... Old batch or counterfeit!?\",\n",
+       " 'summary': 'The reviewer finds the taste of the product mediocre and suspects it may be an old batch or counterfeit due to the lack of foam and strange flavor.',\n",
+       " 'followup_message': \"Cher client, \\n\\nNous sommes désolés d'apprendre que vous n'êtes pas satisfait(e) de notre produit. Nous tenons à vous assurer que tous nos produits sont fabriqués selon les normes de qualité les plus strictes. Cependant, il est possible que vous ayez reçu un produit défectueux ou contrefait. Veuillez nous contacter directement pour que nous puissions résoudre ce problème et vous offrir une expérience satisfaisante avec nos produits. Votre satisfaction est notre priorité. \\n\\nCordialement, \\nL'équipe de [Nom de l'entreprise]\",\n",
        " 'language': 'French'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "ade83f4f",
    "metadata": {
     "height": 778,
@@ -810,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "5f590e9f",
    "metadata": {
     "height": 387,
@@ -847,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "31b06fc8",
    "metadata": {
     "height": 64,
@@ -867,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "f3f50bcc",
    "metadata": {
     "height": 30,
@@ -881,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "8eefec24",
    "metadata": {
     "height": 200,
@@ -913,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "265808a6",
    "metadata": {},
    "outputs": [
@@ -923,7 +917,7 @@
        "'physics: Good for answering questions about physics\\nmath: Good for answering math questions\\nHistory: Good for answering history questions\\ncomputer science: Good for answering computer science questions'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "9f98018a",
    "metadata": {
     "height": 47,
@@ -951,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "11b2e2ba",
    "metadata": {
     "height": 506,
@@ -994,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "1387109d",
    "metadata": {
     "height": 183,
@@ -1020,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "2fb7d560",
    "metadata": {
     "height": 81,
@@ -1031,7 +1025,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_921/3686515509.py:2: LangChainDeprecationWarning: Please see migration guide here for recommended implementation: https://python.langchain.com/docs/versions/migrating_chains/multi_prompt_chain/\n",
+      "/var/folders/_9/kbclh8y12dz3_njd9xrldcm80000gp/T/ipykernel_11182/3686515509.py:2: LangChainDeprecationWarning: Please see migration guide here for recommended implementation: https://python.langchain.com/docs/versions/migrating_chains/multi_prompt_chain/\n",
       "  chain = MultiPromptChain(router_chain=router_chain,\n"
      ]
     }
@@ -1047,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "d86b2131",
    "metadata": {
     "height": 30,
@@ -1068,10 +1062,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Black body radiation is the electromagnetic radiation emitted by a perfect absorber of radiation, known as a black body. A black body absorbs all radiation that falls on it and emits radiation across the entire electromagnetic spectrum. The spectrum of black body radiation is continuous and depends only on the temperature of the black body. This phenomenon is described by Planck's law, which states that the intensity of radiation emitted by a black body at a given wavelength is proportional to the temperature of the body and the wavelength raised to the fifth power.\""
+       "\"Black body radiation refers to the electromagnetic radiation emitted by a perfect black body, which is an idealized physical body that absorbs all incident electromagnetic radiation and emits radiation at all frequencies. The radiation emitted by a black body depends only on its temperature and follows a specific distribution known as Planck's law. This radiation is important in understanding concepts such as thermal radiation and the behavior of objects at different temperatures.\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "3b717379",
    "metadata": {
     "height": 30,
@@ -1106,7 +1100,7 @@
        "'The answer to 2 + 2 is 4.'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "29e5be01",
    "metadata": {
     "height": 30,
@@ -1141,7 +1135,7 @@
        "'Every cell in our body contains DNA because DNA carries the genetic information that determines the characteristics and functions of an organism. DNA contains the instructions for building and maintaining an organism, including the proteins that are essential for cell function and structure. This genetic information is passed down from parent to offspring and is essential for the growth, development, and functioning of all cells in the body. Having DNA in every cell ensures that each cell has the necessary information to carry out its specific functions and contribute to the overall functioning of the organism.'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
